Housekeeping whitespace + corrected _overall perspective modifier class

--- a/source/scss/components/_skill__experience-and-rank.scss
+++ b/source/scss/components/_skill__experience-and-rank.scss
@@ -5,7 +5,7 @@
     padding-right: 5px;
     padding-left: 5px;
 
-    &.skill-overall {
+    &_overall {
         flex-direction: column;
         align-items: center;
     }
